--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@ body {
   color: #000;
   background: #ededed;
   font-family: var(--font-inter);
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .poppins {
