feat: add consulting page

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,9 @@ body {
   * {
     @apply border-border;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     @apply bg-background text-foreground;
   }
